--- a/GGG_System/css/style.css
+++ b/GGG_System/css/style.css
@@ -146,10 +146,51 @@ th{
     line-height: 25px;
 }
 
-.box{
-    border: 1px solid black;
-    width: 30%;
-    padding: 5%;
-    float: left;
-    margin: 1%;
+
+/* 
+-------------------------------
+MAIN DASHBOARD
+-------------------------------
+*/
+
+.box-wrapper{
+    display: flex;
+    flex-flow: row wrap;
 }
+
+.box-wrapper a{
+    flex: 1 1 30%;
+}
+
+.box{
+    padding: 20px;
+    margin: 10px;
+    height: 150px;
+    border-radius: 10px;
+    color: white;
+}
+
+.box:hover{
+    color: #c7ecee;
+}
+
+
+.color-1{
+    background-color: #c0392b;
+}
+.color-2{
+    background-color: #16a085;
+}
+.color-3{
+    background-color: #f39c12;
+}
+.color-4{
+    background-color: #30336b;
+}
+.color-5{
+    background-color: #8e44ad;
+}
+.color-6{
+    background-color:#3498db;
+}
+
