big update CSS and New Database
Fixed CSS and implemented a new database. Need to fix errors with the upcoming changes

--- a/GGG_System/css/login.css
+++ b/GGG_System/css/login.css
@@ -22,6 +22,14 @@ body
     text-align: center;
 }
 
+.txt-red{
+    color: red;
+    font-weight: bold;
+}
+
+.txt-green{
+    color: green;
+}
 
 /*Log In*/
 .wrapper{
