--- a/GGG_System/css/style.css
+++ b/GGG_System/css/style.css
@@ -15,19 +15,7 @@ body{
 
 .wrapper{
     display: flex;
-    position: relative;
-}
-
-.tbl-full{
-    width: 100%;
-}
-
-.tbl-30{
-    width: 30%;
-}
-
-th{
-    border-bottom: 1px solid black;
+    /* position: relative; */
 }
 
 .round{
@@ -46,12 +34,60 @@ th{
     align-items: center;
 }
 
+/*Table CSS*/
+.content-table{
+    /* border: 1px solid black; */
+    border-collapse: collapse;
+    margin: 25px 0px;
+    font-size: 0.9em;
+    min-width: 400px;
+    width: 100%;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(129, 120, 120, 0.15);
+}
+
+.content-table thead tr{
+    background-color: #34495e;
+    color: #fff;
+    text-align: left;
+    font-weight: bold;
+}
+
+.content-table th,
+.content-table td{
+    padding: 12px 15px;
+}
+
+.content-table tbody tr{
+    border-bottom: 1px solid #dddddd;
+}
+
+.content-table tbody tr:nth-child(even){
+    background-color: #bdc3c7;
+}
+
+.content-table tbody tr:last-of-type{
+    border-bottom: 2px solid #34495e;
+}
+
+.tbl-wrapper{
+    min-width: 25%;
+    margin: 0 40%;
+}
+
+th{
+    border-bottom: 1px solid black;
+}
+
+
+/*Buttons*/
 .btn-primary{
     background-color: #e58e26;
-    padding: .5%;
-    margin: 20px 0;
+    padding: 0.5%;
     color: white;
     font-weight: bold;
+    border-radius: 5px;
 }
 
 .btn-primary:hover{
@@ -60,42 +96,50 @@ th{
 }
 
 .btn-secondary{
-    background-color: #388d4a;
-    padding: .5%;
-    margin: 20px 0;
+    background-color: #636e72;
+    margin: 10px 10px;
     color: white;
     font-weight: bold;
+    padding: 1% 2%;
+    font-size: 1.1em;
 }
 
 .btn-secondary:hover{
     transition-duration: 0.5s;
-    background-color: #083612;
+    background-color: #2d3436;
 }
 
 .btn-danger{
-    background-color: #b84d3f;
+    background-color: rgb(255, 75, 75);
     color: white;
     font-weight: bold;
-    padding: .5%;
-    margin: 20px 0;
+    padding: 1% 2%;
+    font-size: 1.1em;
 }
 
 .btn-danger:hover{
     transition-duration: 0.5s;
-    background-color: #92210d;
+    background-color: #d63031;
 }
 
-.pad-1{
-    padding: 1%;
+/*Color*/
+.txt-red{
+    color: rgb(197, 43, 43);
+    font-weight: bold;
+}
+
+.txt-green{
+    color:rgb(89, 180, 89);
+    font-weight: bold;
 }
 
 
 /*Side Navbar*/
 
 .wrapper .sidebar{
-    position: fixed;
+    /* position: fixed; */
     width: 200px; 
-    height: 100%;
+    height: 100vh;
     background: #1e3799;
     padding: 30px 0;
 }
@@ -132,7 +176,8 @@ th{
 /*Main Content*/
 .wrapper .main-content{
     width: 100%;
-    margin-left: 200px;
+    /* margin-left: 200px; */
+
 }
 
 .wrapper .main-content .header{
